# terra_vr

./: CMakeLists.txt  README.md  environment.yml  package.xml
config/: left_arm.json  right_arm.json
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/arm_vr/share/arm_vr/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh  so101_bridge.launch.py
install/arm_vr/share/arm_vr/meshes/: base_link.STL
install/arm_vr/share/arm_vr/src/: so101_bridge_left.py  so101_kinematics.py  tcp_wireless_ros.py  (+1 more)
launch/: display.arm.launch.py  so101_bridge.launch.py
log/: latest_build
meshes/: robot_world_tmp_probe.mjcf
src/: fk_ik_2dof.py  fk_ik_2dof_dual.py  right_wrist_subscriber.py  simple_test_so101.py  so101.py  so101_bridge.py  so101_bridge_right.py  so101_kinematics.py  tcp_wireless_ros.py  teleop.py  teleop_bullet.py  teleoperation.py  test_so101.py  wrist_path_visualizer.py
src/arm_vr/: CMakeLists.txt  chat.txt  environment.yml
src/arm_vr/config/: left_arm.json  left_wrist.json  ports.json  right_arm.json  right_wrist.json  roll_cal.json  vr_frame.json
src/arm_vr/launch/: so101_bridge.launch.py
src/arm_vr/src/: arm_viz.py  bus.py  check_torque.py  fk_ik_2dof.py  fk_ik_2dof_dual.py  ik_control.py  roll_servo4.py  setup_and_launch.py  simple_test_so101.py  so101.py  so101_bridge.py  so101_bridge_left.py  so101_bridge_right.py  tcp_wireless_ros.py  teleop_bridge_node.py  wrist_live.py  wrist_live_copy.py  wrist_plot.py  wrist_servo.py  yaw_servo5.py  zero_arms.py
urdf/: so101_follower.urdf
(+3 files in other folders)
